--- a/Spark-Internship/customer.html
+++ b/Spark-Internship/customer.html
@@ -171,14 +171,7 @@
 
   <script>
     // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyCVW6Cb7U2KmIKfl228vBjHE6VSygROvUE",
-      authDomain: "spark-873cf.firebaseapp.com",
-      projectId: "spark-873cf",
-      storageBucket: "spark-873cf.appspot.com",
-      messagingSenderId: "194075097905",
-      appId: "1:194075097905:web:67ccfdfbee4ddac998ce10"
-    };
+   // Add your firebase configuration in your project setting
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
 
