--- a/Spark-Internship/transaction.html
+++ b/Spark-Internship/transaction.html
@@ -45,14 +45,8 @@
 
   <script>
     // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyCVW6Cb7U2KmIKfl228vBjHE6VSygROvUE",
-      authDomain: "spark-873cf.firebaseapp.com",
-      projectId: "spark-873cf",
-      storageBucket: "spark-873cf.appspot.com",
-      messagingSenderId: "194075097905",
-      appId: "1:194075097905:web:67ccfdfbee4ddac998ce10"
-    };
+   // add your own firebase configuration provided by Firebase
+      
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
 
